<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity"
    android:orientation="horizontal">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:scrollbars="vertical"
        tools:ignore="MissingConstraints">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="180dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/b6"
         />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/mail_text"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:padding="15dp" />



    <RadioGroup
        android:id="@+id/rgCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:button="@drawable/radiobutton_selector"
            android:padding="10dp"
            android:checked="false"
            android:text="@string/customer"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton" />

        <RadioButton
            android:id="@+id/rbDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:button="@drawable/radiobutton_selector"
            android:text="@string/driver"
            android:padding="10dp"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton" />

    </RadioGroup>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:alpha="0.8"
        android:textColor="#FDFDFE"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_button"
        android:textSize="20sp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/login_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_account"
        android:text="@string/no_account_text"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:layout_marginTop="5dp"/>

    </LinearLayout>


</ScrollView>