<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".RegistrationActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="180dp"
        android:src="@drawable/b6"
        android:layout_marginBottom="0dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_text"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="15dp"
        />

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/rgCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:button="@drawable/radiobutton_selector"
            android:padding="10dp"
            android:checked="false"
            android:text="@string/customer"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton" />

        <RadioButton
            android:id="@+id/rbDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:checked="false"
            android:button="@drawable/radiobutton_selector"
            android:text="@string/driver"
            android:padding="10dp"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton" />

    </RadioGroup>

    <Button
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_text"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:alpha="0.8"
        android:textSize="20sp"
        android:textColor="#FDFDFE"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_button"/>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>