<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/previous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha=".8"
            android:background="#1B86A8"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/help_information"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingStart="15dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/make_order"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:text="1- Home Page.\n2- Select Destination by using Search input.\n3- Click Call Delivery Box."
                android:textSize="17sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="#D2948A8A"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_history"
                android:layout_marginTop="10dp"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="1- Navigation bar (Top Left Home Page).\n2- Select History.\n3- Choose Order."
                android:textSize="17sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="#D2948A8A"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rating Driver and PayPal : "
                android:layout_marginTop="10dp"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="1- Show history.\n2- Choose any Order.\n3- Scroll down.\n4- You can rate and PayPal."
                android:textSize="17sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="#D2948A8A"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:text="Change Profile Information and Image : "
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="1- Navigation bar (Top Left Home Page).\n2- Select Profile.\n3- Enter your Information.\n4- Click Confirm."
                android:textSize="17sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="#D2948A8A"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:text="Make Report: "
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="1- Navigation bar (Top Left Home Page).\n2- Select Report.\n3- Enter your Report.\n4- Click Submit."
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>